More options to robust logistic classifier